--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,9 +2,9 @@ name: Code Coverage
 
 on:
   push:
-    branches: [ main, dev, develop ]
+    branches: [ main, dev ]
   pull_request:
-    branches: [ main, dev, develop ]
+    branches: [ main, dev ]
 
 env:
   CARGO_TERM_COLOR: always
