--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -29,12 +29,14 @@ jobs:
 
       - name: Check for vulnerabilities
         run: |
-          if cargo audit 2>&1 | grep -q "error:"; then
-            echo "⚠️ Vulnerabilities found!"
+          # Check for actual vulnerabilities (not warnings)
+          if cargo audit --json | jq -e '.vulnerabilities.found > 0' > /dev/null; then
+            echo "❌ Critical vulnerabilities found!"
             cargo audit
             exit 1
           else
-            echo "✅ No vulnerabilities detected"
+            echo "✅ No critical vulnerabilities detected (warnings may exist)"
+            cargo audit
           fi
 
       - name: Upload audit report
